Sockethead.Web: Breakup entire formbuilder documentation into multiple features and fixed the bug

--- a/Sockethead.Web/Areas/Samples/Views/Home/Dashboard.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/Home/Dashboard.cshtml
@@ -17,8 +17,8 @@
         },
         new Feature
         {
-            Name = "Form Builder",
-            Url = "/Samples/FormBuilder/FormBuilder",
+            Name = "Simple Form",
+            Url = "/Samples/SimpleForm/Dashboard",
             Description = "An ASP.Net Core form builder to create the form effortlessly.",
         },
     }
