--- a/Sockethead.Web/Areas/Samples/Views/SimpleForm/EmailAndPassword.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleForm/EmailAndPassword.cshtml
@@ -6,9 +6,9 @@
         <h4>Email and Password</h4>
         @(await Html
             .SimpleForm(Model, opt => opt.ActionName = "Sample")
-            .HiddenFor(model => model.View)
-            .EditorFor(model => model.Email)
-            .EditorFor(model => model.Password)
+            .AddHiddenRowFor(model => model.View)
+            .AddRowFor(model => model.Email)
+            .AddRowFor(model => model.Password)
             .SubmitButton("Login")
             .RenderAsync())
     </div>
