--- a/Sockethead.Web/Areas/Samples/Views/SimpleForm/NumberInputs.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleForm/NumberInputs.cshtml
@@ -6,11 +6,11 @@
         <h4>Number Inputs</h4>
         @(await Html
             .SimpleForm(Model, new FormOptions { ActionName = "Sample" })
-            .HiddenFor(model => model.View)
-            .EditorFor(model => model.RandomDouble)
-            .EditorFor(model => model.RandomDecimal)
-            .EditorFor(model => model.Float)
-            .EditorFor(model => model.NullableDouble)
+            .AddHiddenRowFor(model => model.View)
+            .AddRowFor(model => model.RandomDouble)
+            .AddRowFor(model => model.RandomDecimal)
+            .AddRowFor(model => model.Float)
+            .AddRowFor(model => model.NullableDouble)
             .SubmitButton("Save Changes")
             .RenderAsync())
     </div>
