--- a/Sockethead.Web/Areas/Samples/Views/SimpleForm/ReadonlyAndDisabled.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleForm/ReadonlyAndDisabled.cshtml
@@ -6,22 +6,22 @@
         <h4>Readonly and Disabled</h4>
         @(await Html
             .SimpleForm(Model, new FormOptions { ActionName = "Sample" })
-            .HiddenFor(model => model.View)
-            .EditorFor(model => model.First, isReadOnly: true)
-            .EditorFor(model => model.Last)
-            .EditorFor(model => model.Disabled, isDisabled: true)
+            .AddHiddenRowFor(model => model.View)
+            .AddRowFor(model => model.First, opt => opt.IsReadOnly = true)
+            .AddRowFor(model => model.Last)
+            .AddRowFor(model => model.Disabled, opt=> opt.IsReadOnly = true)
             .SubmitButton("Save Changes")
             .RenderAsync())
     </div>
     <div class="col-md-7">
         <pre><code>@@(await Html
     .SimpleForm(Model, new FormOptions { ActionName = "Sample" })
-    .EditorFor(model => model.First, isReadOnly: true)
-    .EditorFor(model => model.Last)
-    .EditorFor(model => model.Disabled, isDisabled: true)
+    .HiddenFor(model => model.View)
+    .AddRowFor(model => model.First, opt => opt.IsReadOnly = true)
+    .AddRowFor(model => model.Last)
+    .AddRowFor(model => model.Disabled, opt=> opt.IsReadOnly = true)
     .SubmitButton("Save Changes")
-    .RenderAsync())
-</code></pre>
+    .RenderAsync())</code></pre>
         <p>
             You can optionally pass <code>isReadOnly: true</code> or <code>isDisabled: true</code> to render a readonly or disabled field.
         </p>
