--- a/Sockethead.Web/Areas/Samples/Views/SimpleForm/SubmitButton.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleForm/SubmitButton.cshtml
@@ -6,8 +6,8 @@
         <h4>Submit Button</h4>
         @(await Html
             .SimpleForm(Model, opt => opt.ActionName = "Sample")
-            .HiddenFor(model => model.View)
-            .EditorFor(model => model.First)
+            .AddHiddenRowFor(model => model.View)
+            .AddRowFor(model => model.First)
             .SubmitButton(label: "Update First Name", css: "btn btn-danger")
             .RenderAsync())
     </div>
