--- a/Sockethead.Web/Areas/Samples/Views/SimpleForm/NumberInputs.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleForm/NumberInputs.cshtml
@@ -5,7 +5,7 @@
     <div class="col-md-5">
         <h4>Number Inputs</h4>
         @(await Html
-            .SimpleForm(Model, new FormOptions { ActionName = "Sample" })
+            .SimpleForm(Model, opt => opt.ActionName = "Sample")
             .AddHiddenRowFor(model => model.View)
             .AddRowFor(model => model.RandomDouble)
             .AddRowFor(model => model.RandomDecimal)
