--- a/Sockethead.Web/Areas/Samples/Views/SimpleForm/DateTimeAndDate.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleForm/DateTimeAndDate.cshtml
@@ -5,7 +5,7 @@
     <div class="col-md-5">
         <h4>DateTime and Date</h4>
         @(await Html
-            .SimpleForm(Model, new FormOptions { ActionName = "Sample" })
+            .SimpleForm(Model, opt => opt.ActionName = "Sample")
             .AddHiddenRowFor(model => model.View)
             .AddRowFor(model => model.RandomDate)
             .AddRowFor(model => model.RandomDateOnly)
