--- a/Sockethead.Web/Areas/Samples/Views/SimpleForm/DropDownList.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleForm/DropDownList.cshtml
@@ -9,7 +9,7 @@
     <div class="col-md-5">
         <h4>Drop Down List</h4>
         @(await Html
-            .SimpleForm(Model, new FormOptions { ActionName = "Sample" })
+            .SimpleForm(Model, opt => opt.ActionName = "Sample")
             .AddHiddenRowFor(model => model.View)
             .EnumEditorFor(model => model.SampleEnum)
             .SelectListEditorFor(model => model.City, cityList)
