--- a/Sockethead.Web/Areas/Samples/Views/SimpleForm/BasicUsage.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleForm/BasicUsage.cshtml
@@ -11,7 +11,7 @@
             .AddRowFor(model => model.First)
             .AddRowFor(model => model.Last)
             .AddRowFor(model => model.JobTitle)
-            .SubmitButton("Save Changes")
+            .AddSubmitButtonRow("Save Changes")
             .RenderAsync())
     </div>
     <div class="col-md-7">
