--- a/Sockethead.Web/Areas/Samples/Views/SimpleForm/EmailAndPassword.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleForm/EmailAndPassword.cshtml
@@ -9,7 +9,7 @@
             .AddHiddenRowFor(model => model.View)
             .AddRowFor(model => model.Email)
             .AddRowFor(model => model.Password)
-            .SubmitButton("Login")
+            .AddSubmitButtonRow("Login")
             .RenderAsync())
     </div>
     <div class="col-md-7">
