--- a/Sockethead.Web/Areas/Samples/Views/SimpleForm/NumberInputs.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleForm/NumberInputs.cshtml
@@ -11,7 +11,7 @@
             .AddRowFor(model => model.RandomDecimal)
             .AddRowFor(model => model.Float)
             .AddRowFor(model => model.NullableDouble)
-            .SubmitButton("Save Changes")
+            .AddSubmitButtonRow("Save Changes")
             .RenderAsync())
     </div>
     <div class="col-md-7">
