--- a/Sockethead.Web/Areas/Samples/Views/SimpleForm/SubmitButton.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleForm/SubmitButton.cshtml
@@ -8,7 +8,7 @@
             .SimpleForm(Model, opt => opt.ActionName = "Sample")
             .AddHiddenRowFor(model => model.View)
             .AddRowFor(model => model.First)
-            .SubmitButton(label: "Update First Name", css: "btn btn-danger")
+            .AddSubmitButtonRow(label: "Update First Name", css: "btn btn-danger")
             .RenderAsync())
     </div>
     <div class="col-md-7">
