--- a/Sockethead.Web/Areas/Samples/Views/SimpleForm/DateTimeAndDate.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleForm/DateTimeAndDate.cshtml
@@ -9,7 +9,7 @@
             .AddHiddenRowFor(model => model.View)
             .AddRowFor(model => model.RandomDate)
             .AddRowFor(model => model.RandomDateOnly)
-            .SubmitButton("Save Changes")
+            .AddSubmitButtonRow("Save Changes")
             .RenderAsync())
     </div>
     <div class="col-md-7">
