--- a/Sockethead.Web/Areas/Samples/Views/SimpleForm/TextArea.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleForm/TextArea.cshtml
@@ -8,7 +8,7 @@
             .SimpleForm(Model, opt => opt.ActionName = "Sample")
             .AddHiddenRowFor(model => model.View)
             .AddRowFor(model => model.FooBarBazBBBlah)
-            .SubmitButton("Save Changes")
+            .AddSubmitButtonRow("Save Changes")
             .RenderAsync())
     </div>
     <div class="col-md-7">
