--- a/Sockethead.Web/Areas/Samples/Views/SimpleForm/KitchenSink.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleForm/KitchenSink.cshtml
@@ -3,35 +3,19 @@
 
 <div class="row">
     <div class="col-md-5">
-        <h4>Build Form Manually</h4>
+        <h4>Basic Usage</h4>
         @(await Html
-            .SimpleForm(Model, opt =>
-            {
-                opt.ActionName = "BuildForm";
-                opt.ControllerName = "SimpleForm";
-                opt.FormMethod = FormMethod.Post;
-                opt.CssClass = "form-horizontal";
-            })
+            .SimpleForm(Model)
             .AddHiddenRowFor(model => model.Id)
-            .AddRowFor(model => model.First)
-            .AddRowFor(model => model.Last)
-            .AddRowFor(model => model.JobTitle)
+            .AddRowsForModel()
             .AddSubmitButtonRow("Save Changes")
             .RenderAsync())
     </div>
     <div class="col-md-7">
         <pre><code>@@(await Html
-    .SimpleForm(Model, opt =>
-    {
-        opt.ActionName = "BuildForm";
-        opt.ControllerName = "SimpleForm";
-        opt.FormMethod = FormMethod.Post;
-        opt.CssClass = "form-horizontal";
-    })
+    .SimpleForm(Model)
     .AddHiddenRowFor(model => model.Id)
-    .AddRowFor(model => model.First)
-    .AddRowFor(model => model.Last)
-    .AddRowFor(model => model.JobTitle)
+    .AddRowsForModel()
     .AddSubmitButtonRow("Save Changes")
     .RenderAsync())</code></pre>
         <p>
