--- a/Sockethead.Web/Areas/Samples/Views/SimpleForm/ReadonlyAndDisabled.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleForm/ReadonlyAndDisabled.cshtml
@@ -9,7 +9,7 @@
             .AddHiddenRowFor(model => model.View)
             .AddRowFor(model => model.First, opt => opt.IsReadOnly = true)
             .AddRowFor(model => model.Last)
-            .AddRowFor(model => model.Disabled, opt=> opt.IsReadOnly = true)
+            .AddRowFor(model => model.Disabled, opt=> opt.IsDisabled = true)
             .AddSubmitButtonRow("Save Changes")
             .RenderAsync())
     </div>
@@ -19,7 +19,7 @@
     .HiddenFor(model => model.View)
     .AddRowFor(model => model.First, opt => opt.IsReadOnly = true)
     .AddRowFor(model => model.Last)
-    .AddRowFor(model => model.Disabled, opt=> opt.IsReadOnly = true)
+    .AddRowFor(model => model.Disabled, opt=> opt.IsDisabled = true)
     .SubmitButton("Save Changes")
     .RenderAsync())</code></pre>
         <p>
