--- a/Sockethead.Web/Areas/Samples/Views/SimpleForm/EmailAndPassword.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleForm/EmailAndPassword.cshtml
@@ -3,6 +3,11 @@
 
 <div class="row">
     <div class="col-md-5">
+        
+        @Html.EditorFor(m => m.Password)<br/>
+
+        <br/>
+        
         <h4>Email and Password</h4>
         @(await Html
             .SimpleForm(Model, opt => opt.ActionName = "Sample")
